--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 dependencies:
   flutter:
      sdk: flutter
+  http: ^0.13.4
   intl: ^0.17.0
+
 
 dev_dependencies:
   lints: ^1.0.0
   test: ^1.16.0
+  mockito: ^5.0.16
